instalacion_proxmox_ovh_2019/files/iptables
# Generated by iptables-save v1.6.0 on Wed Aug 21 00:33:02 2019
*nat
:PREROUTING ACCEPT [876372441:54210975615]
:INPUT ACCEPT [10809657:575617251]
:OUTPUT ACCEPT [13816059:1379734075]
:POSTROUTING ACCEPT [363762863:21647812622]
-A PREROUTING -i vmbr0 -p tcp -m tcp --dport 2812 -j DNAT --to-destination 164.132.214.229:2812
-A PREROUTING -i vmbr0 -p tcp -m tcp --dport 10022 -j DNAT --to-destination 164.132.214.229:10022
-A PREROUTING -i vmbr0 -p tcp -m tcp --dport 10023 -j DNAT --to-destination 147.135.184.159:10023
-A PREROUTING -i vmbr0 -p tcp -m tcp --dport 10024 -j DNAT --to-destination 192.168.0.112:10024
-A PREROUTING -i vmbr0 -p tcp -m tcp --dport 10025 -j DNAT --to-destination 192.168.0.130:10025
-A PREROUTING -i vmbr0 -p tcp -m tcp --dport 10003 -j DNAT --to-destination 192.168.0.103:10003
-A PREROUTING -i vmbr0 -p tcp -m tcp --dport 10090 -j DNAT --to-destination 192.168.0.190:10090
-A PREROUTING -i vmbr0 -p tcp -m tcp --dport 10050 -j DNAT --to-destination 192.168.0.50:10050
-A PREROUTING -i vmbr0 -p tcp -m tcp --dport 10013 -j DNAT --to-destination 192.168.0.13:10013
-A PREROUTING -i vmbr0 -p tcp -m tcp --dport 10012 -j DNAT --to-destination 192.168.0.12:10012
-A PREROUTING -i vmbr0 -p tcp -m tcp --dport 10250 -j DNAT --to-destination 192.168.0.250:10250
-A PREROUTING -i vmbr0 -p tcp -m tcp --dport 22008 -j DNAT --to-destination 192.168.0.108:22008
-A PREROUTING -i vmbr0 -p tcp -m tcp --dport 30041 -j DNAT --to-destination 192.168.0.41:30041
-A PREROUTING -i vmbr0 -p tcp -m tcp --dport 30042 -j DNAT --to-destination 192.168.0.42:30042
-A PREROUTING -i vmbr0 -p tcp -m tcp --dport 30043 -j DNAT --to-destination 192.168.0.43:30043
-A PREROUTING -i vmbr0 -p tcp -m tcp --dport 30044 -j DNAT --to-destination 192.168.0.44:30044
-A PREROUTING -i vmbr0 -p tcp -m tcp --dport 30049 -j DNAT --to-destination 192.168.0.46:30049
-A PREROUTING -i vmbr0 -p tcp -m tcp --dport 30051 -j DNAT --to-destination 192.168.0.51:30051
-A PREROUTING -i vmbr0 -p tcp -m tcp --dport 10090 -j DNAT --to-destination 192.168.0.190:10090
-A PREROUTING -i vmbr0 -p tcp -m tcp --dport 10422 -j DNAT --to-destination 192.168.0.192:10422
-A POSTROUTING -s 192.168.0.0/24 -o vmbr0 -j MASQUERADE
-A POSTROUTING -s 46.105.250.0/24 -o vmbr0 -j MASQUERADE
-A POSTROUTING -s 147.135.184.0/24 -o vmbr0 -j MASQUERADE
-A POSTROUTING -s 164.132.214.0/24 -o vmbr0 -j MASQUERADE
-A POSTROUTING -s 192.168.0.0/24 -o vmbr0 -j MASQUERADE
-A POSTROUTING -s 164.132.214.0/24 -o vmbr0 -j MASQUERADE
-A POSTROUTING -s 46.105.250.0/24 -o vmbr0 -j MASQUERADE
-A POSTROUTING -s 147.135.184.0/24 -o vmbr0 -j MASQUERADE
COMMIT
# Completed on Wed Aug 21 00:33:02 2019
# Generated by iptables-save v1.6.0 on Wed Aug 21 00:33:02 2019
*filter
:INPUT DROP [4:128]
:FORWARD ACCEPT [4018:1053630]
:OUTPUT ACCEPT [32:4670]
:f2b-sshd - [0:0]
-A INPUT -p tcp -m multiport --dports 22 -j f2b-sshd
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m tcp --dport 2812 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 3128 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 5900 -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 12722 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8006 -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A f2b-sshd -s 178.62.251.11/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 137.74.115.225/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 216.234.148.179/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 146.185.130.101/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 152.136.81.102/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 216.167.250.218/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 104.248.181.166/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 75.31.93.181/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 159.89.104.243/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 73.87.97.23/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -j RETURN
COMMIT
# Completed on Wed Aug 21 00:33:02 2019
